--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>Jahangir Alisoy</h1>
-        <img src="./assets/images/my-photo.jpg"/>
+        <img src="./assets/images/my-photo.jpg" height="200px" alt="the author's photo"/>
         <h2>Summary</h2>
         <p>
             I am a hardworking and dedicated individual with experience in Web Development.
